Add ladybug to iaf-test runner and fix add-opens classloading problem (#6561)
Fixes `--add-opens=java.base/java.lang=ALL-UNNAMED` problem